# OpticalImaging

./: CalculateAerialImage.py  CalculateAerialImage_SOCS.py  CalculateCharacteristicMatrix.py  CalculateNormalImage.py  CalculateTCCMatrix.py  DecomposeTCC_SOCS.py  Geometry.py  ImageData.py  ImagingModel.py  ImagingPipeline.py  Mask.py  MaskN.py  Numerics.py  Projection.py  ProjectionObjective.py  README.md  Recipe.py  Scatter.py  Source.py  defectivePipeline.py  main.cpp  rcwa.cu  rcwa.h  rcwa.py  simpleRCWA.py  test_defect.py
nearfield/: CMakeLists.txt
nearfield/examples/: T_matrix_test.cu  basic_arithm_test.cu  complex_ops_demo.cu  expA_demo.cu
nearfield/include/: common_utils.h  complex_matrix_ops.cuh  complex_matrix_ops.h  layer_matrix.h  matrix_print_utils.h  smatrix_from_pq.cuh
nearfield/src/: complex_matrix_ops.cu  layer_matrix.cu
